--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!--
+    <script src="libs/polyfill.js"></script>
+    <script src="libs/system.js"></script>
+-->
+    <link rel="stylesheet" type="text/css" media="all" href="app.css" />
     <meta charset="UTF-8">
     <title>Test page 2000</title>
 </head>
 <body>
+<div class="form">
 
+</div>
+<script src="build/app.js"></script>
 </body>
 </html>
