--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <script src="libs/polyfill.js"></script>
     <script src="libs/system.js"></script>
 -->
+    <script src="https://use.fontawesome.com/46c115bfc9.js"></script>
     <link rel="stylesheet" type="text/css" media="all" href="app.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,400,500,900" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Test page 2000</title>
 </head>
